# librosa.cpp

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE  NOTICE.md  Package.swift  README.md  requirements-dev.txt
.github/workflows/: ci.yml  cli-release.yml  npm-publish.yml  web-pages.yml
Sources/CLibrosa/: librosa_c.cpp
Sources/CLibrosa/include/: librosa_c.h
Sources/Librosa/: Librosa.swift
benchmarks/: algorithm_benchmark.cpp  beat_benchmark.cpp  benchmark_helpers.hpp  core_benchmark.cpp  feature_benchmark.cpp  onset_beat_benchmark.cpp  utility_benchmark.cpp
cli/: CLI.md  common.cpp  common.hpp  formatter.cpp  formatter.hpp  main.cpp
cli/commands/: beat.cpp  chroma.cpp  hpss.cpp  info.cpp  melspectrogram.cpp  mfcc.cpp  onset.cpp  pitch.cpp  rms.cpp  spectral.cpp  stft.cpp  tempo.cpp  tonnetz.cpp  trim.cpp  tuning.cpp  zcr.cpp
examples/swift/: Package.swift  README.md
examples/swift/Sources/LibrosaSwiftExample/: main.swift
examples/web/: README.md  index.html  package.json
examples/web/scripts/: prepare-audio.mjs
examples/web/src/: analysis-worker.js  app.js  styles.css
include/librosa/: beat.hpp  decompose.hpp  effects.hpp  filters.hpp  onset.hpp  segment.hpp  sequence.hpp  types.hpp
include/librosa/core/: audio.hpp  constantq.hpp  convert.hpp  harmonic.hpp  intervals.hpp  notation.hpp  pitch.hpp  spectrum.hpp
include/librosa/feature/: inverse.hpp  rhythm.hpp  spectral.hpp  utils.hpp
include/librosa/util/: exceptions.hpp  utils.hpp
scripts/: build-xcframework.sh  release.sh
src/: beat.cpp  decompose.cpp  effects.cpp  filters.cpp  onset.cpp  segment.cpp  sequence.cpp
src/core/: audio.cpp  constantq.cpp  convert.cpp  harmonic.cpp  intervals.cpp  notation.cpp  pitch.cpp  spectrum.cpp
src/feature/: inverse.cpp  rhythm.cpp  spectral.cpp  utils.cpp
src/internal/: convolve2d.hpp  dct.hpp  elliptic.hpp  fft.hpp  fft_accelerate.cpp  fft_fftw.cpp  fft_pffft.cpp  fft_pocketfft.cpp  interp.hpp  knn.hpp  nmf.hpp  pad2d.hpp  rotate2d.hpp  ward.hpp  yin_utils.hpp
src/util/: exceptions.cpp  utils.cpp
tests/: test_audio.cpp  test_beat.cpp  test_cli.cpp  test_constantq.cpp  test_convert.cpp  test_decompose.cpp  test_effects.cpp  test_features.cpp  test_filters.cpp  test_harmonic.cpp  test_intervals.cpp  test_notation.cpp  test_onset.cpp  test_pitch.cpp  test_segment.cpp  test_sequence.cpp  test_spectrum.cpp  test_util.cpp
tests/LibrosaTests/: LibrosaTests.swift
tests/LibrosaTests/ReferenceData/: feature_melspectrogram.json  feature_mfcc.json
tests/crossval/: .gitignore  README.md  generate_references.py  test_crossval.cpp
wasm/: bindings.cpp
